创建net并完成cost & outputs

--- a/AITrials/AITrials.vcxproj.filters
+++ b/AITrials/AITrials.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Sigmoid.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="neuronNet.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
